--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
         </dependency>
 
         <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.5.3</version>
+    </dependency>
+
+    <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>mchange-commons-java</artifactId>
             <version>0.2.3.1</version>
@@ -142,7 +148,7 @@
     </resources>
 
         <plugins>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.2</version>
@@ -155,7 +161,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <!-- generator 工具配置文件的位置  -->
+
+
                     <configurationFile>src/main/resources/mybatis/mybatis-generator/generatorConfig.xml</configurationFile>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
@@ -179,9 +186,8 @@
                 <configuration>
                     <classifier>exec</classifier>
                 </configuration>
-            </plugin>
+            </plugin>-->
         </plugins>
-
 </build>
 
 </project>
