--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
             <version>0.9.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -142,7 +148,7 @@
     </resources>
 
         <plugins>
-            <plugin>
+         <!--   <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.2</version>
@@ -155,7 +161,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <!-- generator 工具配置文件的位置  -->
+
                     <configurationFile>src/main/resources/mybatis/mybatis-generator/generatorConfig.xml</configurationFile>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
@@ -180,6 +186,7 @@
                     <classifier>exec</classifier>
                 </configuration>
             </plugin>
+            -->
         </plugins>
 
 </build>
