--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
     </resources>
 
         <plugins>
-         <!--   <plugin>
+            <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.2</version>
@@ -185,7 +185,6 @@
                     <classifier>exec</classifier>
                 </configuration>
             </plugin>
-            -->
         </plugins>
 
 </build>
