--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
 
         <plugins>
 
-            <!--<plugin>
+            <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.2</version>
@@ -181,7 +181,7 @@
                         <version>1.3.2</version>
                     </dependency>
                 </dependencies>
-            </plugin>-->
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
